# politylink-clips-builder

./: .gitignore  README.md  build.sh  build_artifact.py  build_artifact_category.py  build_artifact_clip.py  build_artifact_home.py  build_artifact_member.py  build_artifact_topic.py  canonicalize.py  clip.py  clip_category_match.py  clip_clip_match.py  clip_gclip_match.py  clip_image.py  clip_member_match.py  clip_minutes_match.py  clip_topic_match.py  cluster.py  dao.py  demo.py  gclip.py  member.py  member_image.py  member_topic_match.py  minutes.py  publish_image.py  pyproject.toml  resize_image.py  thumb.py  topic.py  topic.sh  topic_topic_match.py  utils.py  utils20220701.py
archive/: cluster.py  dao.py
crawler/: settings.py
crawler/spiders/: gclip_spider.py  member_spider.py  minutes_spider.py  shitsugi_spider.py
data/: category.csv  category_annotation.csv  clip_minutes.csv  topic.csv
mylib/: artifact.py  canonicalize.py  topic.py  utils.py
