[tool.poetry]
name = "politylink-clips-builder"
version = "0.1.0"
description = ""
authors = ["MitsukiUsui"]

[tool.poetry.dependencies]
python = "^3.9"
politylink = "^0.1.90"
matplotlib = "^3.0.3"
pyahocorasick = "^1.4.4"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
